changed link from main.css to alt.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Coco Chanel</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/alt.css">
     </head>
     <body>
         <header id="header">
